test_regress/t/t_queue_method.out
%Error-UNSUPPORTED: t/t_queue_method.v:28:14: Unsupported: with statements
   28 |       q.sort with (10 - item);
      |              ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:30:17: Unsupported: with statements
   30 |       q.sort(x) with (10 - x);
      |                 ^~~~
%Error: t/t_queue_method.v:30:14: Can't find definition of variable: 'x'
   30 |       q.sort(x) with (10 - x);
      |              ^
%Error-UNSUPPORTED: t/t_queue_method.v:32:18: Unsupported: with statements
   32 |       qe.sort(x) with (10 - x);
      |                  ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:36:15: Unsupported: with statements
   36 |       q.rsort with (10 - item);
      |               ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:38:19: Unsupported: with statements
   38 |       qe.rsort(x) with (10 - x);
      |                   ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:62:19: Unsupported: with statements
   62 |       qv = q.find with (item == 2);
      |                   ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:64:25: Unsupported: with statements
   64 |       qv = q.find_first with (item == 2);
      |                         ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:66:24: Unsupported: with statements
   66 |       qv = q.find_last with (item == 2);
      |                        ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:69:19: Unsupported: with statements
   69 |       qv = q.find with (item == 20);
      |                   ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:71:25: Unsupported: with statements
   71 |       qv = q.find_first with (item == 20);
      |                         ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:73:24: Unsupported: with statements
   73 |       qv = q.find_last with (item == 20);
      |                        ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:76:25: Unsupported: with statements
   76 |       qi = q.find_index with (item == 2);
      |                         ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:78:31: Unsupported: with statements
   78 |       qi = q.find_first_index with (item == 2);
      |                               ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:80:30: Unsupported: with statements
   80 |       qi = q.find_last_index with (item == 2);
      |                              ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:83:25: Unsupported: with statements
   83 |       qi = q.find_index with (item == 20); qi.sort;
      |                         ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:85:31: Unsupported: with statements
   85 |       qi = q.find_first_index with (item == 20);
      |                               ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:87:30: Unsupported: with statements
   87 |       qi = q.find_last_index with (item == 20);
      |                              ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:102:17: Unsupported: with statements
  102 |       i = q.sum with (item + 1);
      |                 ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:106:21: Unsupported: with statements
  106 |       i = q.product with (item + 1);
      |                     ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:117:17: Unsupported: with statements
  117 |       i = q.and with (item + 1);
      |                 ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:121:16: Unsupported: with statements
  121 |       i = q.or with (item + 1);
      |                ^~~~
%Error-UNSUPPORTED: t/t_queue_method.v:125:17: Unsupported: with statements
  125 |       i = q.xor with (item + 1);
      |                 ^~~~
%Error: Exiting due to
